--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,8 @@ description = "Tyler Blair Toronto Business Consulting"
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
     title = "Tyler Blair Toronto"
   
-
+    [params.home.posts]       
+    enable = true
 
   # Home page config
   # 主页信息设置
